# marvel_heroes

./: .env.example  .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/scripts/: entrypoint.sh
backend/src/: main.py
backend/src/application/: exceptions.py  mappers.py
backend/src/application/dtos/: hero.py
backend/src/application/interfaces/: cache.py  http_clients.py  mappers.py  repositories.py  serialization.py  uow.py
backend/src/application/usecases/: delete_hero_from_repo.py  get_hero_by_id.py  get_hero_by_id_from_repo.py  get_hero_from_cache.py  get_heroes_from_cache.py  get_heroes_from_repo.py  save_hero_to_repo.py  save_heroes_to_cache.py  upload_image_usecase.py
backend/src/application/usecases/cache/: get_hero_from_cache.py  get_heroes_from_cache.py  invalidate_hero_cache.py  save_hero_to_cache.py  save_heroes_to_cache.py
backend/src/application/usecases/external_api/: enrich_hero_usecase.py  fetch_heroes_from_external_api.py
backend/src/application/usecases/repo/: delete_hero_from_repo.py  get_hero_by_id_from_repo.py  get_heroes_from_repo.py  save_hero_to_repo.py  update_hero_in_repo.py
backend/src/config/: app.py  base.py  database.py  external_api.py  image_service_settings.py  logging.py  redis.py  settings.py
backend/src/config/ioc/: di.py  providers.py
backend/src/domain/: constants.py  exceptions.py
backend/src/domain/entities/: hero.py
backend/src/domain/value_objects/: hero_name.py
backend/src/infrastructures/cache/: redis_client.py
backend/src/infrastructures/db/: exceptions.py  session.py  uow.py
backend/src/infrastructures/db/mappers/: hero_db_mapper.py
backend/src/infrastructures/db/migrations/: env.py
backend/src/infrastructures/db/migrations/versions/: 0504bfde579e_initial_schema.py  2e22a0ef7b35_remove_external_external_img_url_field.py  55efec04d81b_add_external_hero_fields.py  65a6d6786f3e_add_unique_constraint_to_hero_name.py  8ef3ae83dd1e_fixed_updated_at_field_for_base_model.py  ffa0c5a5f341_initial_migration.py
backend/src/infrastructures/db/models/: base.py  hero.py
backend/src/infrastructures/db/repositories/: hero.py
backend/src/infrastructures/http/: clients.py
backend/src/infrastructures/http/mappers/: external_hero_mapper.py
backend/src/infrastructures/mappers/: hero.py
backend/src/presentation/api/rest/: error_handling.py
backend/src/presentation/api/rest/v1/: routers.py
backend/src/presentation/api/rest/v1/controllers/: hero_controller.py
backend/src/presentation/api/rest/v1/mappers/: hero_mapper.py
backend/src/presentation/api/rest/v1/schemes/: requests.py  responses.py
backend/src/services/: exceptions.py  image_service.py  interfaces.py  utils.py
backend/tests/: conftest.py  factories.py  faker.py
backend/tests/test_application/test_usecases/repo/: test_get_hero_from_repo_by_id.py  test_get_heroes_from_repo.py
backend/tests/test_domain/test_entities/: test_hero.py
backend/tests/test_domain/test_value_objects/: test_hero_name.py
backend/tests/test_infrastructure/test_db/models/: test_hero_model.py
backend/tests/test_services/: test_image_service.py
