[project]
name = "marvel-heroes-fast-api-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "\"denmarahov@gmail.com\""}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "python-magic-bin (>=0.4.14,<0.5.0)",
    "redis[hiredis] (>=7.2.1,<8.0.0)",
    "stamina (>=25.2.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
