[project]
name = "marvel-heroes-fast-api-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "\"denmarahov@gmail.com\""}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "redis[hiredis] (>=7.2.1,<8.0.0)",
    "stamina (>=25.2.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "filetype (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",
    "F",
    "W",
    "B",
    "C4",
    "C90",
    "UP",
    "SIM",
    "I",
    "N",
    "S",
    "T20",
    "PT",
    "RET",
    "Q",
]
ignore = [
    "S105", "S106", "S107",
    "E501",
    "N818",
    "B008"
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D100", "D101", "D102", "D103"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.infrastructures.db.migrations.*"
ignore_errors = true

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "faker (>=40.12.0,<41.0.0)",
    "polyfactory (>=3.3.0,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "types-aiofiles (>=25.1.0.20260409,<26.0.0.0)"
]
